[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 222.0
margin_top = 83.0
margin_right = 280.0
margin_bottom = 107.0

[node name="Button" type="Button" parent="."]
margin_left = 36.0
margin_top = 48.0
margin_right = 48.0
margin_bottom = 68.0
text = "Botão 1"

[node name="Button2" type="Button" parent="."]
margin_left = 42.0
margin_top = 92.0
margin_right = 54.0
margin_bottom = 112.0
text = "Botão 2"

[node name="Button3" type="Button" parent="."]
margin_left = 37.0
margin_top = 126.0
margin_right = 49.0
margin_bottom = 146.0
text = "Botão 3"

[node name="Label" type="Label" parent="."]
margin_left = 207.0
margin_top = 26.0
margin_right = 247.0
margin_bottom = 40.0

[node name="Label2" type="Label" parent="."]
margin_left = 216.0
margin_top = 141.0
margin_right = 256.0
margin_bottom = 155.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
